fix content heingt on mobile

--- a/src/styles/base/_mobile.scss
+++ b/src/styles/base/_mobile.scss
@@ -16,7 +16,7 @@
     .contents {
       img{
         width: 100%;
-        height: unset;
+        max-height: unset;
       }
     }
 
